@@ -43,4 +43,4 @@ table.bordered        { border-collapse:collapse; }
 div#about     { width:500px; }
   div#about p { font-size:12pt; }
 
-div.log {font-family:monospace;overflow:hidden;}
+div.log { font-family:monospace;font-size:9pt;background-color:#eee;color:#333;order:2px solid #ccc;display:inline-block;padding:0.5em; }
