@@ -1,5 +1,6 @@
 
 Sep 20
+- limit line length for results logs
 - use yellow for flash messages
 - use table for My Targets
 - icon with rough-cut Ruby
